Swiping in recyclerView works

--- a/app/src/main/res/layout/item_scene_13_grid.xml
+++ b/app/src/main/res/layout/item_scene_13_grid.xml
@@ -8,13 +8,13 @@
     app:layoutDescription="@xml/ml_scene_13"
     android:layout_height="300dp">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardViewScene11"
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/cardViewScene13"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="16dp"
+        app:cardCornerRadius="10dp"
+        android:background="@color/colorGrey"
         app:cardBackgroundColor="@color/colorBlue"
-        app:cardCornerRadius="8dp"
         app:cardElevation="4dp">
 
         <LinearLayout
@@ -38,5 +38,25 @@
                 android:textAppearance="?attr/textAppearanceListItem"
                 tools:text="test" />
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
+
+    <View
+        android:id="@+id/cardScene13LikeOverlay"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="@id/cardViewScene13"
+        app:layout_constraintBottom_toBottomOf="@id/cardViewScene13"
+        app:layout_constraintStart_toStartOf="@id/cardViewScene13"
+        app:layout_constraintEnd_toEndOf="@id/cardViewScene13"
+        android:background="@drawable/frame_overlay_like"/>
+
+    <View
+        android:id="@+id/cardScene13DislikeOverlay"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="@id/cardViewScene13"
+        app:layout_constraintBottom_toBottomOf="@id/cardViewScene13"
+        app:layout_constraintStart_toStartOf="@id/cardViewScene13"
+        app:layout_constraintEnd_toEndOf="@id/cardViewScene13"
+        android:background="@drawable/frame_overlay_dislike"/>
 </androidx.constraintlayout.motion.widget.MotionLayout>
