--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="colorRed">#ff3333</color>
     <color name="colorGreen">#00ff00</color>
     <color name="colorAutumnBrown">#ee732e</color>
+    <color name="white">#FFFFFF</color>
 </resources>
