color for rocket background

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="colorGreen">#00ff00</color>
     <color name="colorAutumnBrown">#ee732e</color>
     <color name="white">#FFFFFF</color>
+    <color name="rocketBackgroundBlue">#5e51eb</color>
 </resources>
