--- a/app/src/main/res/xml/ml_scene_14.xml
+++ b/app/src/main/res/xml/ml_scene_14.xml
@@ -56,7 +56,29 @@
         app:autoTransition="animateToEnd"
         app:constraintSetEnd="@id/flyOff"
         app:constraintSetStart="@id/prepareToLaunch"
-        app:duration="1000" />
+        app:duration="2000" >
+        <KeyFrameSet>
+            <KeyAttribute app:motionTarget="@id/scene14Bubble1"
+                android:alpha="1.0"
+                app:motionProgress="0.1" />
+            <KeyAttribute app:motionTarget="@id/scene14Bubble2"
+                android:alpha="1.0"
+                app:motionProgress="0.3"/>
+            <KeyAttribute app:motionTarget="@id/scene14Bubble3"
+                android:alpha="1.0"
+                app:motionProgress="0.3"/>
+            <KeyAttribute app:motionTarget="@id/scene14Bubble4"
+                android:alpha="1.0"
+                app:motionProgress="0.5"/>
+            <KeyAttribute app:motionTarget="@id/scene14Bubble5"
+                android:alpha="1.0"
+                app:motionProgress="0.7"/>
+            <KeyAttribute app:motionTarget="@id/scene14Bubble6"
+                android:alpha="1.0"
+                app:motionProgress="0.7"/>
+
+        </KeyFrameSet>
+    </Transition>
 
     <ConstraintSet android:id="@+id/beginning">
         <Constraint
@@ -148,17 +170,99 @@
         <Constraint android:id="@+id/scene14SecondaryText">
             <PropertySet android:alpha="0.0" />
         </Constraint>
+
+        <Constraint android:id="@+id/scene14Bubble1">
+            <Layout
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_marginEnd="30dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/scene14Bubble4" />
+            <PropertySet android:alpha="0.0"/>
+        </Constraint>
+        <Constraint android:id="@+id/scene14Bubble2">
+            <Layout
+                android:id="@+id/scene14Bubble2"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/scene14Bubble4"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+            <PropertySet android:alpha="0.0"/>
+        </Constraint>
+        <Constraint android:id="@+id/scene14Bubble3">
+            <Layout
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                app:layout_constraintBottom_toBottomOf="@+id/scene14Bubble4"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.593" />
+            <PropertySet android:alpha="0.0"/>
+        </Constraint>
+        <Constraint android:id="@+id/scene14Bubble4">
+            <Layout
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_marginEnd="30dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+            <PropertySet android:alpha="0.0"/>
+        </Constraint>
+        <Constraint android:id="@+id/scene14Bubble5">
+            <Layout
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                app:layout_constraintBottom_toBottomOf="@+id/scene14Bubble6"
+                app:layout_constraintEnd_toEndOf="@+id/scene14Bubble1"
+                app:layout_constraintHorizontal_bias="0.21"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/scene14Bubble2" />
+            <PropertySet android:alpha="0.0"/>
+        </Constraint>
+        <Constraint android:id="@+id/scene14Bubble6">
+            <Layout
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/scene14Bubble1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/scene14Bubble2" />
+            <PropertySet android:alpha="0.0"/>
+        </Constraint>
     </ConstraintSet>
 
     <ConstraintSet
         android:id="@+id/flyOff"
         app:deriveConstraintsFrom="@id/prepareToLaunch">
         <Constraint android:id="@+id/scene14Rocket">
-            <Layout app:layout_constraintBottom_toTopOf="parent"
+            <Layout
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
+                app:layout_constraintBottom_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintStart_toStartOf="parent" />
+        </Constraint>
+        <Constraint android:id="@+id/scene14Bubble1">
+            <PropertySet android:alpha="1.0" />
+        </Constraint>
+        <Constraint android:id="@+id/scene14Bubble2">
+            <PropertySet android:alpha="1.0" />
+        </Constraint>
+        <Constraint android:id="@+id/scene14Bubble3">
+            <PropertySet android:alpha="1.0" />
+        </Constraint>
+        <Constraint android:id="@+id/scene14Bubble4">
+            <PropertySet android:alpha="1.0" />
+        </Constraint>
+        <Constraint android:id="@+id/scene14Bubble5">
+            <PropertySet android:alpha="1.0" />
+        </Constraint>
+        <Constraint android:id="@+id/scene14Bubble6">
+            <PropertySet android:alpha="1.0" />
         </Constraint>
     </ConstraintSet>
 
