--- a/app/src/main/res/xml/ml_scene_13.xml
+++ b/app/src/main/res/xml/ml_scene_13.xml
@@ -8,14 +8,14 @@
         app:duration="100">
         <OnSwipe
             app:dragDirection="dragRight"
-            app:onTouchUp="autoCompleteToStart"
+
             app:touchAnchorId="@id/cardViewScene13"
             app:touchAnchorSide="right" />
 
         <KeyFrameSet>
             <KeyAttribute
                 android:alpha="1.0"
-                app:framePosition="25"
+                app:framePosition="50"
                 app:motionTarget="@+id/cardScene13LikeOverlay" />
         </KeyFrameSet>
 
@@ -49,6 +49,15 @@
         app:constraintSetEnd="@id/goneLeft"
         app:constraintSetStart="@id/dislike"
         app:duration="50" />
+
+    <Transition
+        app:constraintSetEnd="@id/clickOnCardEnd"
+        app:constraintSetStart="@id/rest"
+        app:duration="50">
+        <OnClick
+            app:clickAction="transitionToEnd"
+            app:targetId="@id/content" />
+    </Transition>
 
     <ConstraintSet android:id="@+id/rest">
 
@@ -95,13 +104,57 @@
 
     </ConstraintSet>
 
+    <ConstraintSet android:id="@+id/clickOnCardEnd">
+
+        <Constraint
+            android:id="@+id/cardViewScene13"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            app:cardBackgroundColor="@color/colorBlue"
+            app:cardCornerRadius="10dp"
+            app:layout_constraintHeight_percent="0.9"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.9" />
+
+        <Constraint android:id="@+id/cardScene13LikeOverlay">
+            <Layout
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="@id/cardViewScene13"
+                app:layout_constraintEnd_toEndOf="@id/cardViewScene13"
+                app:layout_constraintStart_toStartOf="@id/cardViewScene13"
+                app:layout_constraintTop_toTopOf="@id/cardViewScene13" />
+
+            <PropertySet android:alpha="0.0" />
+            <Transform android:elevation="10dp" />
+        </Constraint>
+
+        <Constraint android:id="@+id/cardScene13DislikeOverlay">
+            <Layout
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="@id/cardViewScene13"
+                app:layout_constraintEnd_toEndOf="@id/cardViewScene13"
+                app:layout_constraintStart_toStartOf="@id/cardViewScene13"
+                app:layout_constraintTop_toTopOf="@id/cardViewScene13" />
+
+            <PropertySet android:alpha="0.0" />
+            <Transform android:elevation="10dp" />
+        </Constraint>
+
+    </ConstraintSet>
+
+
     <ConstraintSet
         android:id="@+id/like"
         app:deriveConstraintsFrom="@id/rest">
         <Constraint
             android:id="@+id/cardViewScene13"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
             android:layout_marginStart="300dp"
             android:rotation="45"
             app:layout_constraintHeight_percent="0.9"
