--- a/app/src/main/res/layout/item_scene_13_grid.xml
+++ b/app/src/main/res/layout/item_scene_13_grid.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.piotrprus.motionlayoutplayground.helper.CustomMotionLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.piotrprus.motionlayoutplayground.helper.CustomMotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/interceptML"
@@ -21,7 +20,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <TextView
@@ -40,6 +39,15 @@
                 android:textAppearance="?attr/textAppearanceListItem"
                 tools:text="test" />
         </LinearLayout>
+
+        <ImageView
+            android:id="@+id/scene13WhiteBox"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:background="@drawable/ic_info_24px"
+            android:visibility="invisible"
+            tools:visibility="visible" />
     </androidx.cardview.widget.CardView>
 
     <View
